zeta-code/tui/src/app/snapshots/zeta_tui__app__frame__tests__slash_popup_clears_covered_transcript_rows_edge_to_edge.snap
---
source: zeta-code/tui/src/app/frame_tests.rs
assertion_line: 1252
expression: "render(&app, terminal_area.width, terminal_area.height)"
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  /status                    show the active session, thread, and model         
  /statusline                choose the items shown in the status line          
  /skills                    browse configured skill sources                    
  /mcp                       list configured MCP tools                          
  /resume                    list or resume a saved session                     
  /archive                   archive the current session and start a new chat   
────────────────────────────────────────────────────────────────────────────────
> /                                                                             
────────────────────────────────────────────────────────────────────────────────
                                                                                
  ⏸ ask permissions on
