zeta-code/tui/src/app/snapshots/zeta_tui__app__frame__tests__startup_panel.snap
---
source: zeta-code/tui/src/app/frame_tests.rs
assertion_line: 1034
expression: "render(&app, 80, 20)"
---
                                                                                
    ▄  ▄     Zeta Code v0.1.0                                                   
  ▗█▛██▜█▖   Automatic model · Access unknown                                   
  ▝▜████▛▘   .                                                                  
    ▝  ▘                                                                        
                                                                                
> /startup                                                                      
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
─ Startup ──────────────────────────────────────────────────────────────────────
                                                                                
> Mode  ·  New                                                                  
  Workspace  ·  .                                                               
  Profile  ·  default                                                           
  Connection  ·  Local App Server                                               
                                                                                
  Esc to close
