zeta-code/tui/src/app/snapshots/zeta_tui__app__frame__tests__status_panel_adaptive_height.snap
---
source: zeta-code/tui/src/app/frame_tests.rs
assertion_line: 416
expression: rendered
---
  Zeta Code v0.1.0                                                              
─ Status ───────────────────────────────────────────────────────────────────────
                                                                                
   Thread    Processes                                                          
  Model:                    openai/gpt                                          
  Full context window:      100,000 tokens                                      
  Available context window: 90,000 tokens                                       
  Remaining context window: 80,000 tokens (88.8%)                               
  Model calls:              0                                                   
  Input tokens:             0 tokens                                            
  Cached input:             0 tokens                                            
  Cached input share:       unknown                                             
  Cache writes:             0 tokens                                            
  Output tokens:            0 tokens                                            
  Reasoning output:         0 tokens                                            
  Reference cost:           unknown                                             
  Session ID:               session-1                                           
  Thread ID:                thread-1                                            
                                                                                
  Tab to switch · Esc to close
