zeta-code/tui/src/app/snapshots/zeta_tui__app__frame__tests__status_panel_after_escape.snap
---
source: zeta-code/tui/src/app/frame_tests.rs
expression: "render(&app, 80, 20)"
---
                                                                                
  ┌───── Zeta Code v0.1.0 ───────────────────────────────────────────────────┐  
  │                           │  Tips for getting started                    │  
  │        Welcome back!      │  Use @ to mention workspace files and / to   │  
  │                           │  discover commands.                          │  
  │           ╭─────╮         │  ──────────────────────────────────────────  │  
  │           │  ζ  │         │  Try asking                                  │  
  │           ╰─┬─┬─╯         │  “Explain how this workspace is              │  
  │                           │  structured.”                                │  
  /status                    show the active session, thread, and model         
  /statusline                choose the items shown in the status line          
  /skills                    browse configured skill sources                    
  /mcp                       list configured MCP tools                          
  /resume                    list or resume a saved session                     
  /archive                   archive the current session and start a new chat   
────────────────────────────────────────────────────────────────────────────────
> /                                                                             
────────────────────────────────────────────────────────────────────────────────
                                                                                
  ⏸ ask permissions on
