zeta-code/tui/src/app/snapshots/zeta_tui__app__frame__tests__status_panel_fixed_input_height.snap
---
source: zeta-code/tui/src/app/frame_tests.rs
expression: "render(&app, 80, 20)"
---
  ┌───── Zeta Code v0.1.0 ───────────────────────────────────────────────────┐  
  │                           │  Tips for getting started                    │  
  │        Welcome back!      │  Use @ to mention workspace files and / to   │  
  │                           │  discover commands.                          │  
  │           ╭─────╮         │  ──────────────────────────────────────────  │  
  │           │  ζ  │         │  Try asking                                  │  
  │           ╰─┬─┬─╯         │  “Explain how this workspace is              │  
  │                           │  structured.”                                │  
  │     Ready when you are    │  “Implement the change and run the relevant  │  
  └──────────────────────────────────────────────────────────────────────────┘  
  Status──────────────────────────────────────────────────────────────────────  
  Model: openai/gpt                                                             
  Full context window: 100,000 tokens                                           
  Available context window: 90,000 tokens                                       
  Remaining context window: 80,000 tokens (88.8%)                               
  Session ID: session-1                                                         
  Thread ID: thread-1                                                           
  Thread version: 4                                                             
                                                                                
  Esc to close
