zeta-code/tui/src/app/snapshots/zeta_tui__app__frame__tests__transcript_jump_to_bottom.snap
---
source: zeta-code/tui/src/app/frame_tests.rs
assertion_line: 1218
expression: "render(&app, 50, 16)"
---
● Model invocation failed 1                       
                                                  
● Model invocation failed 2                       
                                                  
● Model invocation failed 3                       
                                                  
● Model invocation failed 4                       
                                                  
● Model invocation failed 5                       
             Jump to bottom (click) ↓             
                                                  
──────────────────────────────────────────────────
>                                                 
──────────────────────────────────────────────────
                                                  
  ⏸ ask permissions on
