zeta-code/tui/src/app/snapshots/zeta_tui__app__frame__tests__transcript_scrolled_to_welcome_header.snap
---
source: zeta-code/tui/src/app/frame_tests.rs
assertion_line: 787
expression: scrolled_to_start
---
                                                                                
    ▄  ▄     Zeta Code v0.1.0                                                   
  ▗█▛██▜█▖   Automatic model · Access unknown                                   
  ▝▜████▛▘   /work/zeta                                                         
    ▝  ▘                                                                        
                                                                                
● Conversation started.                                                         
                                                                                
● Model invocation failed 0                                                     
                                                                                
● Model invocation failed 1                                                     
                                                                                
● Model invocation failed 2                                                     
                            Jump to bottom (click) ↓                            
                                                                                
────────────────────────────────────────────────────────────────────────────────
>                                                                               
────────────────────────────────────────────────────────────────────────────────
                                                                                
  ⏸ ask permissions on
